infra/istio-resources/istio-auth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system  
spec:
  mtls:
    mode: STRICT
