infra/istio-resources/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "prometheus.clokesh.me"
    - "alertmanager.clokesh.me"
    - "grafana.clokesh.me"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: vault-gateway
  namespace: vault
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "vault.clokesh.me"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: tools-gateway
  namespace: tools
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "atlantis.clokesh.me"
    - "opencost.clokesh.me"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.clokesh.me"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: tekton-gateway
  namespace: tekton-pipelines
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "tekton.clokesh.me"
    - "tekton-webhook.clokesh.me"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ai-gateway
  namespace: ai
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "finure.clokesh.me"
    - "api-finure.clokesh.me"
