infra/istio-resources/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - "prometheus.clokesh.me"
  gateways:
  - monitoring-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-operated.monitoring.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hosts:
  - "alertmanager.clokesh.me"
  gateways:
  - monitoring-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: alertmanager-operated.monitoring.svc.cluster.local
        port:
          number: 9093
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - "grafana.clokesh.me"
  gateways:
  - monitoring-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: promstack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  hosts:
  - "vault.clokesh.me"
  gateways:
  - vault-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vault.vault.svc.cluster.local
        port:
          number: 8200
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: atlantis
  namespace: tools
spec:
  hosts:
  - "atlantis.clokesh.me"
  gateways:
  - tools-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: atlantis.tools.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "kiali.clokesh.me"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: opencost
  namespace: tools
spec:
  hosts:
  - "opencost.clokesh.me"
  gateways:
  - tools-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: opencost.tools.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  hosts:
  - "tekton.clokesh.me"
  gateways:
  - tekton-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tekton-dashboard.tekton-pipelines.svc.cluster.local
        port:
          number: 9097
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tekton-webhook
  namespace: tekton-pipelines
spec:
  hosts:
  - "tekton-webhook.clokesh.me"
  gateways:
  - tekton-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: el-github-webhook-listener.tekton-pipelines.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-frontend
  namespace: ai
spec:
  hosts:
  - "finure.clokesh.me"
  gateways:
  - ai-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app-frontend.ai.svc.cluster.local
        port:
          number: 80
